tests/ui/consts/constifconst-call-in-const-position.stderr
error[E0277]: the trait bound `T: const Tr` is not satisfied
  --> $DIR/constifconst-call-in-const-position.rs:17:39
   |
LL | const fn foo<T: [const] Tr>() -> [u8; T::a()] {
   |                                       ^

error[E0277]: the trait bound `T: const Tr` is not satisfied
  --> $DIR/constifconst-call-in-const-position.rs:18:9
   |
LL |     [0; T::a()]
   |         ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
